<resources>
    <string name="app_name">News Feed Reader</string>
    <string name="title_activity_feed_selector">Feed Selector</string>
    <string name="title_activity_news_feed">News Feed</string>
    <string name="tab_text_1">News</string>
    <string name="tab_text_2">Sports</string>
    <string name="tab_text_3">Other</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="news_author_format">By %1$s</string>

    <string name="download">Download</string>

    <string name="error_network_connection">Internet disconnected. Please try after connecting to internet.</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="settings_app_theme_key">AppThemeKey</string>
    <string name="settings_app_theme_title">App Theme</string>
    <string name="settings_app_theme_summary">Select preferred app theme</string>

    <string name="settings_dark_theme_enabled_key">DarkThemeEnabled</string>
    <string name="settings_dark_theme_enabled_title">Dark Theme</string>
    <string name="settings_dark_theme_enabled_summary_on">On</string>
    <string name="settings_dark_theme_enabled_summary_off">Off</string>

    <string name="settings_data_saver_key">DataSaverKey</string>
    <string name="settings_data_saver_title">Data Saver</string>
    <string name="settings_data_saver_summary_on">Click-to-download for images is enabled</string>
    <string name="settings_data_saver_summary_off">Enable Click-to-download for images</string>

    <string name="settings_open_links_key">OpenLinksKey</string>
    <string name="settings_open_links_title">Open News details in Default Browser</string>
    <string name="settings_open_links_summary_on">News details will open in your default browser</string>
    <string name="settings_open_links_summary_off">Enable to open news details in your default browser</string>

    <!--Slide 1 Title and Description-->
    <string name="slide_1_title">Business</string>
    <string name="slide_1_desc">The way of reaching the goals of your business life!</string>

    <!--Slide 2 Title and Description-->
    <string name="slide_2_title">Sports</string>
    <string name="slide_2_desc">The easiest way to follow your favorite sports!</string>

    <!--Slide 3 Title and Description-->
    <string name="slide_3_title">Technology</string>
    <string name="slide_3_desc">To know what the citizen is move on!</string>

    <!--Slide 4 Title and Description-->
    <string name="slide_4_title">Health</string>
    <string name="slide_4_desc">Health tips to keep you fit and fine!</string>

    <string name="my_preference">WelcomeScreen</string>
    <string name="my_preference_key">WelcomeScreenKey"</string>

    <string name="about_title">About</string>
    <string name="about_desc">
        NOTE: Please note that all the information presented in this application are receiving from Original News Sites and NewsAPI Site, So those can be sometimes inaccurate which is beyond the control of the app developer
        \n\n
        General Information:
        \n
        CTSE Android App Development
        Group No: 08
        \n\n
        Developers:
        \n
        Nirmal Ariyathilake- IT15054128
        Sakila Dissanayake - IT15027498
        \n\n
        App Version: 1.0

    </string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">Settings</string>



</resources>
